# screencastgen

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.gpu  INSTALLATION.md  README.md  docker-compose.gpu-web.yml  docker-compose.gpu.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
assets/demo-reader/: index.html
demo-reader/: index.html  reader_manifest.json
docs/: index.md  troubleshooting.md
docs/concepts/: architecture.md  data-flow.md  index.md  pipelines.md  providers.md  web-architecture.md
docs/getting-started/: index.md  installation.md
docs/guides/: audio.md  highlight.md  index.md  lip-sync.md  remote-gpu.md  visualization.md  web-application.md
docs/reference/: index.md
docs/reference/configuration/: docker-compose.md  pyproject-toml.md  setup-script.md  web-makefile.md
docs/reference/core/: aligner.md  cli.md  concatenator.md  constants.md  doctor.md  epub-builder.md  extractor.md  highlight-renderer.md  inference-batcher.md  inference-server.md  lipsync-facade.md  models.md  offline-reader.md  page-renderer.md  reader-assets.md  remote-gpu-client.md  text-processing.md  tracker.md  transcription.md  types.md  video-composer.md  whisper-x-compat.md  word-matcher.md
docs/reference/pipelines/: audio-pipeline.md  highlight-pipeline.md  lipsync-pipeline.md  pipeline-common.md  pipeline-events.md  pipeline-types.md  visualization-pipeline.md
docs/reference/providers/: alignment-registry.md  latent-sync-provider.md  lipsync-registry.md  manim-ce-renderer.md  manim-gl-renderer.md  qwen-backend.md  remote-tts.md  tts-base.md  tts-registry.md  visualization-registry.md  whisper-x-provider.md
screencastgen/: __init__.py  __main__.py  aligner.py  cli.py  concatenator.py  constants.py  doctor.py  epub_builder.py  extractor.py  gpu_memory.py  highlight_renderer.py  inference_batcher.py  inference_server.py  lipsync.py  logging_config.py  models.py  offline_reader.py  page_renderer.py  reader_assets.py  remote_gpu.py  text_processing.py  tracker.py  transcription.py  tts_clone.py  types.py  video_composer.py  whisperx_compat.py  word_matcher.py
screencastgen/backends/: __init__.py  base.py  f5_tts.py  qwen_backend.py  qwen_tts.py  remote_tts.py
screencastgen/pipelines/: __init__.py  audio.py  common.py  events.py  highlight.py  lipsync.py  types.py  visualization.py
screencastgen/providers/: __init__.py
screencastgen/providers/align/: __init__.py  base.py  whisperx_provider.py
screencastgen/providers/lipsync/: __init__.py  base.py  latentsync_provider.py  latentsync_worker.py  wav2lip_provider.py
screencastgen/providers/tts/: __init__.py  f5_tts.py  qwen_backend.py  remote_tts.py
screencastgen/providers/visualization/: base.py  (+3 more)
scripts/: install_latentsync.sh  setup.py
tests/: conftest.py  test_gpu_models.py  test_highlight_pipeline.py  test_inference_batcher.py  test_latentsync_provider.py  test_lipsync_pipeline.py  test_setup_and_doctor.py  test_tts_pipeline.py  test_visualization_pipeline.py  test_web_epub_export.py  test_web_job_transcription.py  test_whisperx_compat.py
web/: .env.example  Dockerfile.backend  Makefile  docker-compose.yml
web/backend/: alembic.ini  config.py  database.py  logging_config.py  main.py  models.py  requirements.txt  schemas.py
web/frontend/: index.html  nginx.conf  package-lock.json  package.json
(+86 files in other folders)
